assets/css/screen.css
/**
 * -------------------------------------------------------------
 * Reset
 * ------------------------------------------------------------- */

* { 
	-moz-box-sizing: border-box; 
	-webkit-box-sizing: border-box; 
	box-sizing: border-box; 
	-webkit-text-size-adjust: 100%; 
	
	margin: 0;
	padding: 0;
}

article, 
aside, 
details, 
figcaption, 
figure, 
footer, 
header, 
hgroup, 
menu, 
nav, 
section { display: block; }

button {
	background: none;
	border: none;
	border-radius: 0px;
	outline: 0;
	-webkit-appearance: none;
}

img, 
video {
	max-width: 100%;
	height: auto;
}

li { list-style: none; }
li:before { content: "\200B"; }

svg {
	width: 40px;
	height: 40px;
	display: inline-block;
	vertical-align: middle;
	fill: var(--col-border);
}


/**
 * ------------------------------------------------------------- 
 * Google Font: Jost, latin
 * ------------------------------------------------------------- */

/* Light 300 *//*
@font-face {
    font-family: 'Jost';
    font-style: normal;
    font-weight: 300;
    src: local(''),
        url('../fonts/Jost/jost-v3-latin-300.woff2') format('woff2'), 
        url('../fonts/Jost/jost-v3-latin-300.woff') format('woff'); 
}

/* Regular 400 *//*
@font-face {
    font-family: 'Jost';
    font-style: normal;
    font-weight: 400;
    src: local(''),
        url('../fonts/Jost/jost-v3-latin-regular.woff2') format('woff2'), 
        url('../fonts/Jost/jost-v3-latin-regular.woff') format('woff'); 
}

/* Medium 500 *//*
@font-face {
    font-family: 'Jost';
    font-style: normal;
    font-weight: 500;
    src: local(''),
        url('../fonts/Jost/jost-v3-latin-500.woff2') format('woff2'), 
        url('../fonts/Jost/jost-v3-latin-500.woff') format('woff'); 
}


/**
 * ------------------------------------------------------------- 
 * CSS custom properties
 * ------------------------------------------------------------- */

:root {
	--col-text: #000;
	--col-text-reverse: #fff;
	--col-border: #abab9e; //#979797;
    --col-hover: #5b5b6e;
	--col-page: #fff;
}


/**
 * ------------------------------------------------------------- 
 * Site settings
 * ------------------------------------------------------------- */

html { font-size: 62.5%; }

body { 
	font-family: 'Jost', Helvetica, Arial, sans-serif;
	font-size: 16px;
    font-size: 1.6rem;
	font-weight: 300;
	line-height: 1.5;
	background-color: var(--col-page);
	color: var(--col-text);	
	overflow-x: hidden;
}

.site {
    width: 90%;
    max-width: 81.25em;
    margin: 2em auto;
}

article { margin-top: 2em; }


/**
 * ------------------------------------------------------------- 
 * Typography
 * ------------------------------------------------------------- */

h1 {
    font-size: 72px;
    font-size: 7.2rem;
    font-weight: 300;
    text-transform: uppercase;
    padding: 2em 0;
}


h2 {
    font-size: 36px;
    font-size: 3.6rem;
    font-weight: 400;
    padding-bottom: 4em;
}

h3 {
    font-size: 18px;
    font-size: 1.8rem;
}

p {
    font-size: 21px;
    font-size: 2.1rem;
    padding-bottom: 1em;
    max-width: 50ch;
}

small { font-size: 85%; }

nav li,
footer p {
    font-size: 16px;
    font-size: 1.6rem;
}

nav li {
    text-transform: uppercase;
    letter-spacing: 2px;
    font-weight: 500;
}


@media screen and ( max-width: 37.49em ) {

    h1 {
        font-size: 54px;
        font-size: 5.4rem;
    }
}


/**
 * ------------------------------------------------------------- 
 * Links
 * ------------------------------------------------------------- */

a {
    color: inherit;
    text-decoration: none;
}

a:hover svg { fill: var(--col-text); }


/**
 * ------------------------------------------------------------- 
 * Header
 * ------------------------------------------------------------- */

header {
    display: flex;
    flex-direction: column-reverse;
}

nav {
    display: flex;
    justify-content: space-between;
}

nav ul {
    display: flex;
    justify-content: space-between;
    min-width: 60%;
    padding: 0.5em 0;
}

@media screen and ( min-width: 37.50em ) { nav ul { min-width: 30%; } }
@media screen and ( min-width: 64em ) { nav ul { min-width: 20%; } }



/**
 * ------------------------------------------------------------- 
 * Gallery
 * ------------------------------------------------------------- */

.gallery {
    display: flex;
    flex-wrap: wrap;
}

.gallery > * {
    flex: 1 1 15em;
    margin: 0 3em 6em 3em;
    align-self: center;
}


.gallery div > a {
    position: relative;
    z-index: 99;
}

/* There is grid support */
@supports (display: grid) {
	
	.gallery {
		display: grid;
		grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
		grid-gap: 6em;
	}
	
	.gallery > * { margin: 0; }
}



/**
 * ------------------------------------------------------------- 
 * Gallery image display
 * ------------------------------------------------------------- */

figure {
	height: 0;
	opacity: 0;
}

figure:target {
	opacity: 1;
    width: 100vw;
	height: 100vh;
	background: var(--col-page);

	position: absolute;
	top: 0;
    left: 50%;
    right: 50%;
    margin: 0 -50vw;
	padding: 3em;
	z-index: 100;
}

figure  {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    position: relative;
    z-index: 1;
}

figure a:hover { color: var(--col-text); }
figure a:hover svg { fill: var(--col-text); }

figure img {
    align-self: center;
    max-height: 768px;
    height: 75%;
    width: auto;
    max-width: auto;
}

figcaption {
	font-size: 12px;
	text-transform: uppercase;
    letter-spacing: 2px;
	color: #5b5b6e;
    align-self: center;
}

figure > a {
    display: block;
    font-size: 21px;
    font-size: 2.1rem;
	color: var(--col-border);
    text-align: right;
}

figure div {
    display: flex;
    justify-content: space-between;
    position: relative;
    z-index: 100;
    position: absolute;
    top: calc((100% - 6em) / 2);
    width: calc(100% - 6em);
}
 

/**
 * ------------------------------------------------------------- 
 * Sound
 * ------------------------------------------------------------- */

.sound {  
    margin: 5em 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

audio { margin-bottom: 3em; }


/**
 * ------------------------------------------------------------- 
 * Footer
 * ------------------------------------------------------------- */

footer {
    border-top: 1px solid var(--col-border);
    margin-top: 8em;
    padding: 4em 0;
}


footer ul {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    margin-bottom: 5em;
}

footer ul li {
    padding: 0.5em 0;
}


/**
 * ------------------------------------------------------------- 
 * Colophon author
 * ------------------------------------------------------------- */

.author a {
	display: block;
	width: 75px; 
	height: 30px;
	text-indent: -999em;
	background-image: url('../images/jokedewinter.svg');
}
		
@media screen and ( min-width: 37.50em ) {
	
	.author {
		float: right;
        margin-top: -2.6em;
	}
}

